# summarizer

./: .gitignore  LICENSE  captions.json  captions.sh  google.py  output.json  pyproject.toml  setup.cfg  sum2.py  summarizer.py  wikipedia.py
.github/workflows/: build-docs.yml
docs/: objects.inv  searchindex.js
docs/log/: atom.xml  index.html
docs/log/22.356-152519/: index.html
docs/log/archive/: index.html
docs/log/category/status/: index.html
docs/mission/: index.html
docsrc/: conf.py
docsrc/docs/: .buildinfo  index.html  searchindex.js
docsrc/docs/genindex/: index.html
docsrc/docs/log/: atom.xml
docsrc/docs/log/2022/: index.html
docsrc/docs/log/category/: index.html
docsrc/docs/log/drafts/: index.html
docsrc/docs/refs/: index.html
docsrc/docs/search/: index.html
docsrc_/: conf.py  desc.rst  index.rst
docsrc_/log/: 22.347-130048.rst  22.347-162222.rst  22.350-073001.rst  22.350-074023.rst  22.351-084538.rst  22.365-142025.rst
docsrc_/log/23.006-192648/: index.rst
docsrc_/modules/: index.rst  photon_platform.logger.lister.rst  photon_platform.logger.logger.rst  photon_platform.logger.rst
golden-ratio-wikipedia/: keywords.json  keywords.md  links.md  main.md  original.html  outline.json
introducing-chatgpt-and-whisper-apis/: original.html  original.rst
photon/summarizer/: google.py
src/photon_platform/summarizer/: __init__.py  sum2.py  summarizer.py
