[metadata]
name = photon.summarizer
version = attr: photon.summarizer._version.__version__
author = phi ARCHITECT
author_email = your.email@example.com
description = Your package description
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
url = https://github.com/photon-platform/summarizer

[options]
python_requires = >=3.7
packages = find:
include_package_data = True
install_requires =
  # Add your package dependencies here, e.g.,
  # requests

[options.extras_require]
dev =
  # Add your development dependencies here, e.g.,
  black
  # pytest

[options.entry_points]
console_scripts =
  # Add your console scripts here, e.g.,
  summarizer = photon.summarizer:main

# [tool.black]
# line_length = 120
# target-version = ['py37', 'py38', 'py39']
# exclude = '''
# (
  # /(
      # \.eggs
    # | \.git
    # | \.hg
    # | \.mypy_cache
    # | \.pytest_cache
    # | \.tox
    # | \.venv
    # | _build
    # | buck-out
    # | build
    # | dist
  # )/
# )
# '''

